specify width to fix centring on IE

--- a/assets/targets/injection/nav/_modal.scss
+++ b/assets/targets/injection/nav/_modal.scss
@@ -39,6 +39,7 @@
       left: 0;
       margin: 0 auto;
       max-width: 900px;
+      width: 100%; // fixes centring on IE
       right: 0;
     }
   }
